# rChip8

./: Cargo.toml  README.md
src/: cpu.rs  cpu_tests.rs  main.rs
src/drivers/: display.rs
src/utils/: audio.rs  display.rs  event.rs  mod.rs  rom_reader.rs
