[package]
name = "r_chip8"
version = "0.1.0"
authors = ["mureke <markus.suomalainen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"

# $sudo apt-get install libsdl2-dev
[dependencies.sdl2]
version = "0.30"
default-features = false
features = []